--- a/src/bd.tex
+++ b/src/bd.tex
@@ -2,8 +2,8 @@
 \documentclass{unibooklet}
 \usepackage{tikz-qtree}
 \usepackage{array,ragged2e,pst-node,pst-dbicons}
-
 \usepackage{tikz}
+
 \usetikzlibrary{shapes.multipart}
 \usetikzlibrary{matrix}
 \usetikzlibrary{positioning}
@@ -93,7 +93,7 @@
 Bazy Danych \\
 \large Pytania egzaminacyjne}
 \author{Hubert Jaremko}
-\date{2019/2020}
+\date{\today}
 \frenchspacing
 
 \begin{document}
