Poprawionio przykład tabeli w BCNF z redundancją
Fix #2

--- a/sections/normalizations.tex
+++ b/sections/normalizations.tex
@@ -43,7 +43,7 @@ Dodatkowe zależności:
 
 \begin{tcolorbox}
     \textbf{Tylko 1NF} - Częściowa funkcyjna zależność atrybutu wtórnego od
-    podzbioru właściwego klucza w zależności nr 2.
+    podzbioru właściwego klucza w zależności nr 1.
 \end{tcolorbox}
 
 \pagebreak
@@ -298,13 +298,23 @@ Proszę \underline{podać przykład} tabeli, która jest w postaci normalnej
         \hline
         1 & C & niemiecki \\
         \hline
+        1 & C & angielski \\
+        \hline
+        1 & Java & niemiecki \\
+        \hline
         1 & Java & angielski \\
         \hline
         2 & C & francuski \\
         \hline
+        2 & C & niemiecki \\
+        \hline
+        2 & C & hiszpański \\
+        \hline
+        2 & Java & francuski \\
+        \hline
         2 & Java & niemiecki \\
         \hline
-        2 & & hiszpański \\
+        2 & Java & hiszpański \\
         \hline
     \end{tabular}
 \end{center}
@@ -324,7 +334,7 @@ Proszę \underline{podać przykład} tabeli, która jest w postaci normalnej
     strona nie zawiera klucza.
 \end{tcolorbox}
 
-% \pagebreak
+\pagebreak
 
 \horrule{0.5pt}
 Proszę \underline{podać przykład} tabeli, która jest w \textbf{5NF},
@@ -361,7 +371,7 @@ ale jest w niej \textbf{redundancja}.\\
     produkuje \texttt{Część} 1).
 \end{tcolorbox}
 
-\pagebreak
+% \pagebreak
 
 \horrule{0.5pt}
 Proszę \underline{przedstawić} algorytm doprowadzenia relacji do
